# pacman-bot

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
src/: bot.py  config.example.py  game_state.py  helper.py  main.py  map.py  minimap.py  models.py  my_keyboard.py  pathfinding.py  walls_mapper.py
tests/: test_models.py  test_path_finding.py
